# cpp_workspace

./: .gitignore  pattern_generation_binding_test.py
learning/: classes  classes.cpp  error  errors  errors.cpp  hello_world  hello_world.cpp
library_otomation/: CMakeLists.txt  README.md
library_otomation/data/: book.txt
library_otomation/include/basicModels/: Book.h  DateTime.h  Transaction.h  User.h
library_otomation/include/dataManagerModels/: Books.h  DataManager.h  Transactions.h  Users.h
library_otomation/include/utils/: Encryption.h  Tools.h
library_otomation/src/: gui.cpp  main.cpp
library_otomation/src/basicModels/: Book.cpp  DateTime.cpp  Transaction.cpp  User.cpp
library_otomation/src/dataManagerModels/: Books.cpp  DataManager.cpp  Transactions.cpp  Users.cpp
library_otomation/src/utils/: Encryption.cpp  Tools.cpp
pattern_generator/: CMakeLists.txt  README.md
pattern_generator/bindings/: bindings.cpp
pattern_generator/include/: Cyclical.h
pattern_generator/src/: Cyclical.cpp  main.cpp
